# atlas

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
docs/: atlas-vision-handoff.md  design.md  initial_prompt.md  sprint-plan.md  vision-handoff-2026-06-16.md
import-pipeline/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
import-pipeline/app/: config.py  enrich.py  links.py  main.py  mapping.py  models.py  pipeline.py  queue.py  runner.py  segment.py  slugify.py  writer.py
import-pipeline/app/api/: imports.py
import-pipeline/app/db/: pool.py  repository.py
import-pipeline/app/enrichment/: __init__.py  base.py  batch.py  deterministic.py  factory.py  llm_client.py  llm_enricher.py
import-pipeline/app/parsing/: markdown_detect.py  markdown_parser.py
import-pipeline/app/scripts/: preview.py  smoke_pipeline.py
import-pipeline/app/sources/: article.py  base.py  http.py  locations.py  markdown.py  pdf.py  strategies.py  website.py
import-pipeline/docs/: llm-live-test-plan.md  v2-plan.md
import-pipeline/eval/: .gitignore  README.md  REPORT-baseline.md  metrics.py  run_eval.py
import-pipeline/eval/fixtures/: flat_article.md  nested_docs.md  tiny_leaves.md
import-pipeline/tests/: test_enrichment.py  test_interior.py  test_segmentation_v2.py  test_sources.py  test_website_robustness.py
lib/: collection-data.ts  collection-slugs.ts  entry-data.ts  entry-input.ts  entry-slugs.ts  file-ingestion.ts  graph-data.ts  import-service.ts  ingestion-types.ts  (+6 more)
(+62 files in other folders)
