[project]
name = "atlas-import-pipeline"
version = "0.1.0"
description = "Local ingestion service that imports external knowledge into Atlas."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "httpx>=0.28",
    "docling>=2.104.0",
    "trafilatura>=2.1.0",
    "python-multipart>=0.0.32",
]

# This is an application, not a distributable package — don't try to build it.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
